<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vital+</string>
    <string name="action_settings">Settings</string>
    <string name="vitals">Vitals</string>
    <string name="profile">Profile</string>
    <string name="vitals_button">VITALS</string>
    <string name="profile_button">PROFILE</string>
    <string name="second_activity">PROFILE</string>
    <string name="profile_firstname">First Name</string>
    <string name="profile_lastname">Last Name</string>
    <string name="profile_age">Age</string>
    <string name="profile_weight">Weight (Kg)</string>
    <string name="profile_height">Height (cm)</string>
    <string name="profile_gender">Gender</string>
    <string name="send">Send</string>

</resources>
