<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:windowSoftInputMode="stateVisible" 
    android:background="#696969" >

    <!--  
    <TextView
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:text="@string/second_activity"
  android:gravity="center_horizontal"
  android:typeface="sans"
  android:textSize="32sp"
  android:textColor="#FFFFFF"
	/>
	-->
    
   <EditText
  android:id="@+id/user_firstname"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/profile_firstname"
  android:inputType="text"
  android:textColorHint="#FFFFFF"
	/>
    
    <EditText
    android:id="@+id/user_lastname"
 	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:hint="@string/profile_lastname"
	android:inputType="text"
	android:textColorHint="#FFFFFF"
	/>
    
          <EditText
  android:id="@+id/user_age"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/profile_age"
  android:inputType="number"
  android:textColorHint="#FFFFFF"
	/>
    
            <EditText       
  android:id="@+id/user_weight"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/profile_weight"
  android:inputType="number"
  android:textColorHint="#FFFFFF"
	/>
    
              <EditText
    android:id="@+id/user_height"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:hint="@string/profile_height"
	android:inputType="number"
	android:textColorHint="#FFFFFF"
	/>
    
                <EditText
  android:id="@+id/user_gender"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/profile_gender"
  android:textColorHint="#FFFFFF"
	/>

   <Button
  android:id="@+id/save_button"
  android:layout_width="100dp"
  android:layout_height="wrap_content"
  android:layout_gravity="right"
  android:text="@string/send" />
                
                
</LinearLayout>
